--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ p {
 
 nav ul li a:hover {
   color: green;
-  background-color: aqua;
+  background-color: whitesmoke;
   border-radius: 10px;
 }
 
